Add `--add-opens` for Java 17